--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,10 @@
 <html>
-
-<a href="https://github.com/Ibr1997/TarfCafeMenu/blob/main/Tarf%20Coffee%20Shop%20Menu.pdf">
+<head>
+<!-- <a href="Tarf%20Coffee%20Shop%20Menu.pdf"> -->
+ <script>
+            function myFunction() {
+                window.open("Tarf%20Coffee%20Shop%20Menu.pdf");
+            }
+        </script>
+</head>
 </html>
