--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,6 @@
 <html>
-<head>
+
 <!-- <a href="Tarf%20Coffee%20Shop%20Menu.pdf"> -->
- <script>
-            function myFunction() {
-                window.open("Tarf%20Coffee%20Shop%20Menu.pdf");
-            }
-        </script>
-</head>
+
+<a href=""Tarf%20Coffee%20Shop%20Menu.pdf" target="_top">Opens the linked document in the full body of the window</a>
 </html>
